@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>2.0</version>
+</metadata>
