@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="PasswordReset" meta_type="Filesystem Directory View"
+    directory="Products.PasswordResetTool:skins/PasswordReset"/>
+  <skin-path name="*">
+    <layer name="PasswordReset" insert-after="custom"/>
+ </skin-path>
+</object>
